--- a/gdm-theme/ubuntu.css
+++ b/gdm-theme/ubuntu.css
@@ -1849,7 +1849,7 @@ stage {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4); }
   
   #lockDialogGroup {
-    background: #000000 url(file:///usr/share/backgrounds/Black-Wallpaper.png);
+    background: #000000;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center }
